--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+html{
+
+  font-family: "Barlow Condensed", sans-serif !important;
+}
 
 body {
-  @apply text-white
+  @apply text-white;
+
+}
+
+.border-1 {
+  border-width: 1px;
+}
+
+.bg-right{
+  background: #bf1f26;
+  clip-path: polygon(25% 30%, 100% 20%, 100% 85%, 25% 75%);;
+}
+.bg-left{
+  background: #bf1f26;
+  clip-path: polygon(0% 20%, 75% 30%, 75% 75%, 0% 85%);
+}
+
+.underline-red {
+  width: 30%;
+  height: 2px;
+  background-color: #be2126;
+}
+
+.underline-gray {
+  width: 100%;
+  height: 2px;
+  background-color: #e8e8e8;
+}
+
+.bg-left-black{
+  width: 100%;
+  height: 15px;
+  background: #193661;
+  clip-path: polygon(0% 0%, 50% 0%, 45% 100%, 0% 100%);
+  position: absolute;
+}
+
+.bg-right-red{
+  width: 100%;
+  height: 15px;
+  background: #be2126;
+  clip-path: polygon(52.5% 0%, 100% 0%, 100% 100%, 47.5% 100%);
+  position: absolute;
 }
